fix(facets): Consistent spacing for terms.
Closes #611

--- a/app/scripts/components/facets/styles/facets.less
+++ b/app/scripts/components/facets/styles/facets.less
@@ -78,6 +78,12 @@
   text-overflow: ellipsis;
 }
 
+.list-group-item-text {
+  margin: 0;
+  padding: 0;
+  line-height: 20px;
+}
+
 .search-input {
   width: 100%;
 
